--- a/styles/style.css
+++ b/styles/style.css
@@ -118,6 +118,7 @@ input, textarea, select {
     width: 100%;
 }
 textarea {
+    min-height: calc(1em + 24px);
     height: 100px;
     resize: vertical;
 }
