--- a/styles/bootstrap-grid.css
+++ b/styles/bootstrap-grid.css
@@ -24,6 +24,8 @@ html {
   width: 100%;
   margin-right: auto;
   margin-left: auto;
+  padding-right: 10px;
+  padding-left: 10px;
   z-index: 2;
   position: relative;
 }
