--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,9 @@
     --color-3: #d47f5e;
     --color-3-light: #fdefe8;
     --font-family: "Poppins", "Open Sans", sans-serif;
+    --font-size: 16px;
+    --font-weight-normal: 300;
+    --font-weight-bold: 600;
 }
 
 * {
@@ -24,17 +27,17 @@
 
 body {
     font-family: var(--font-family);
-    font-weight: normal;
+    font-weight: var(--font-weight-normal);
     font-style: normal;
     text-decoration: none;
-    font-size: 16px;
+    font-size: var(--font-size);
     line-height: 1;
     color: var(--color-text);
     background-color: var(--color-background);
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-weight: 600;
+    font-weight: var(--font-weight-bold);
     text-transform: uppercase;
     letter-spacing: 2px;
     line-height: 1.1;
@@ -70,7 +73,7 @@ p {
 }
 
 a {
-    font-weight: 600;
+    font-weight: var(--font-weight-bold);
     color: var(--color-primary);
 }
 a:hover {
@@ -78,13 +81,14 @@ a:hover {
 }
 
 b {
-    font-weight: 600;
+    font-weight: var(--font-weight-bold);
     color: var(--color-primary);
 }
 
 button {
-    font-size: 16px;
-    font-weight: 600;
+    font-family: var(--font-family);
+    font-size: var(--font-size);
+    font-weight: var(--font-weight-bold);
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -108,7 +112,7 @@ button a:hover, button:hover a {
 }
 
 label {
-    font-weight: 600;
+    font-weight: var(--font-weight-bold);
     text-transform: uppercase;
     letter-spacing: 2px;
     width: 100%;
@@ -180,7 +184,7 @@ nav button a {
 }
 
 section {
-    padding: 150px 0;
+    padding: 120px 0;
     border-top: 2px solid var(--color-border);
 }
 section:first-child {
