--- a/components/carousel/carousel.module.css
+++ b/components/carousel/carousel.module.css
@@ -16,7 +16,7 @@
 }
 
 .item {
-	background-color: #eee;
+	background-color: rgba(255, 255, 255, 0.5);
 	scroll-snap-align: center;
 	display: inline-block;
 	border-radius: 3px;
