--- a/styles/style.css
+++ b/styles/style.css
@@ -3,20 +3,26 @@
 */
 
 :root {
-    --color-text: #555;
-    --color-background: #fff;
-    --color-border: #eee;
+    --font-family: "Poppins", "Open Sans", sans-serif;
+    --font-size: 15px;
+    --font-weight-normal: 300;
+    --font-weight-bold: 600;
+    --color-text: rgb(0, 0, 0);
+    --color-background-outer: rgb(255, 255, 255);
+    --color-background-primary: rgb(233, 243, 240);
+    --color-background-secondary: rgb(245, 245, 245);
     --color-placeholder: var(--color-text);
     --color-primary: #62ad94;
     --color-primary-light: #d9ebe5;
-    --color-secondary: #5e9bd4;
-    --color-secondary-light: #dae9f7;
+    --color-2: #5e9bd4;
+    --color-2-light: #dae9f7;
     --color-3: #d47f5e;
     --color-3-light: #fdefe8;
-    --font-family: "Poppins", "Open Sans", sans-serif;
-    --font-size: 16px;
-    --font-weight-normal: 300;
-    --font-weight-bold: 600;
+    --website-container-border: 50px;
+    --media-sm: 576px;
+    --media-md: 768px;
+    --media-lg: 992px;
+    --media-xl: 1200px;
 }
 
 * {
