--- a/styles/style.css
+++ b/styles/style.css
@@ -10,14 +10,14 @@
     --color-text: rgb(0, 0, 0);
     --color-background-outer: rgb(255, 255, 255);
     --color-background-primary: rgb(233, 243, 240);
-    --color-background-secondary: rgb(245, 245, 245);
+    --color-background-secondary: rgb(246, 246, 246);
     --color-placeholder: var(--color-text);
     --color-primary: #62ad94;
-    --color-primary-light: #d9ebe5;
+    --color-primary-light: #c1e2d7;
     --color-2: #5e9bd4;
-    --color-2-light: #dae9f7;
+    --color-2-light: #c3dbf0;
     --color-3: #d47f5e;
-    --color-3-light: #fdefe8;
+    --color-3-light: #f8e1d6;
     --website-container-border: 50px;
     --media-sm: 576px;
     --media-md: 768px;
