--- a/styles/style.css
+++ b/styles/style.css
@@ -8,12 +8,18 @@
     --font-weight-normal: 300;
     --font-weight-bold: 600;
     --color-text: rgb(0, 0, 0);
-    --color-background-outer: rgb(255, 255, 255);
-    --color-background-primary: rgb(233, 243, 240);
-    --color-background-secondary: rgb(246, 246, 246);
     --color-placeholder: var(--color-text);
-    --color-primary: #62ad94;
-    --color-primary-light: #c1e2d7;
+    --color-background-outer: rgb(255, 255, 255);
+    --color-background-inner: rgb(245, 245, 245);
+    --color-primary: #218380;
+    --color-primary-light: #79bbb6;
+    --color-primary-background: #d2e6e5;
+    /* --color-primary: #62ad94; */
+    /* --color-primary-light: #c1e2d7; */
+    /* --color-primary-background: rgb(233, 243, 240); */
+    /* --color-primary: #6371bd; */
+    /* --color-primary-light: #aebfe0; */
+    /* --color-primary-background: #E7EBF3; */
     --color-2: #5e9bd4;
     --color-2-light: #c3dbf0;
     --color-3: #d47f5e;
@@ -142,7 +148,7 @@ textarea {
 }
 
 main {
-    background-color: var(--color-background-primary);
+    background-color: var(--color-primary-background);
     margin: var(--website-container-border);
     min-height: calc(100vh - 2 * var(--website-container-border));
 }
