--- a/components/posts/posts.module.css
+++ b/components/posts/posts.module.css
@@ -1,3 +1,20 @@
+.metadata {
+  /* font-size: 1em; */
+  font-weight: var(--font-weight-normal);
+  text-decoration: none;
+  color: var(--color-text);
+}
+
+.title {
+  /* font-size: 1.25em; */
+  font-weight: var(--font-weight-bold);
+  color: var(--color-primary);
+}
+
+/* .date {
+
+} */
+
 .heading2Xl {
   font-size: 2.5rem;
   line-height: 1.2;
