--- a/styles/style.css
+++ b/styles/style.css
@@ -173,7 +173,6 @@ main {
   margin: var(--website-container-border);
   min-height: calc(100vh - 2 * var(--website-container-border));
 }
-
 header,
 footer {
   font-size: 0.9em;
@@ -181,6 +180,7 @@ footer {
   height: var(--website-container-border);
   width: calc(100% - 2 * var(--website-container-border));
   margin: 0 var(--website-container-border);
+  padding: var(--font-size) 0;
   position: fixed;
   z-index: 9998;
   display: flex;
@@ -195,25 +195,32 @@ header {
 footer {
   bottom: 0;
 }
+section {
+  padding: calc(2 * var(--website-container-border)) 0;
+}
+section:first-child {
+  min-height: calc(100vh - 2 * var(--website-container-border));
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+}
 
 @media (max-width: 768px) {
   main {
-    margin: var(--website-container-border) 0;
+    margin: 0;
+    min-height: calc(100vh - 2 * var(--website-container-border));
   }
   header,
   footer {
+    height: var(--website-container-border);
     width: 100%;
     margin: 0;
-    padding: 0 var(--website-container-border);
+    padding: 10px;
   }
 }
 
-nav {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-nav ul {
+header ul {
   list-style-type: none;
   display: flex;
   flex-direction: row;
@@ -221,40 +228,27 @@ nav ul {
   align-items: center;
   margin: 0;
 }
-nav li {
+header li {
   display: block;
   margin-left: 20px;
 }
-nav a {
+header a {
   text-decoration: none;
   text-transform: uppercase;
   letter-spacing: 2px;
   color: var(--color-text);
 }
-nav a:hover {
+header a:hover {
   letter-spacing: 2px;
   color: var(--color-primary);
 }
-nav button a {
+header button a {
   color: var(--color-background-outer);
-}
-
-section {
-  padding: 100px 0;
-}
-section:first-child {
-  min-height: 600px;
-  height: calc(100vh - 2 * var(--website-container-border));
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
 }
 
 article {
   font-family: var(--font-family);
-  font-size: 1.3em;
+  font-size: 1.2em;
   line-height: 1.5em;
   padding: 200px 20%;
 }
