--- a/components/post/post.module.css
+++ b/components/post/post.module.css
@@ -1,30 +1,48 @@
 .item {
   margin: 30px 0;
+  font-size: 1rem;
   line-height: 1.5;
 }
 
-.link {
-  font-size: 1rem;
-  font-weight: var(--font-weight-normal);
+.item .link {
   text-decoration: none;
-  color: var(--color-text);
 }
 
-.title {
-  font-size: 1.25em;
+.frontmatter {
+  font-weight: var(--font-weight-normal);
+  color: var(--color-text);
+}
+article .frontmatter {
+  margin: 0 0 60px 0;
+}
+
+.frontmatter .title {
   font-weight: var(--font-weight-bold);
-}
-
-.title,
-.subtitle {
   color: var(--color-text);
 }
+.item .frontmatter .title {
+  font-size: 1.25em;
+}
+article .frontmatter .title {
+  margin: 0 0 10px 0;
+  font-size: 2em;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  line-height: 1.1;
+}
 
-.info {
+.frontmatter .subtitle {
+  color: var(--color-text);
+}
+article .frontmatter .subtitle {
+  margin: 0 0 10px 0;
+  font-style: italic;
+}
+
+.frontmatter .info {
   display: inline-flex;
   color: var(--color-monotone);
 }
-
-.infoSeparator {
+.frontmatter .info .infoSeparator {
   padding: 0 5px;
 }
