refactor(testimonials): update styling

--- a/sections/clientTestimonials.module.css
+++ b/sections/clientTestimonials.module.css
@@ -12,9 +12,26 @@
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   padding: 30px;
-  background-color: rgba(255, 255, 255, 0.5);
+  height: 300px;
+  background-color: rgba(255, 255, 255, 1);
 }
-/* .card > *:not(:last-child) {
-  margin-bottom: 10px;
+@media only screen and (max-width: 992px) {
+  .card {
+    height: auto;
+  }
+}
+
+/* .quotes {
+  float: left;
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+  background: var(--color-primary-background);
+  color: var(--color-primary);
+  font-size: 80px;
+  text-align: center;
 } */
