--- a/sections/services.module.css
+++ b/sections/services.module.css
@@ -12,9 +12,14 @@
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
   padding: 30px;
-  background-color: rgba(255, 255, 255, 0.5);
+  height: 300px;
+  background-color: rgba(255, 255, 255, 1);
 }
-/* .card > *:not(:last-child) {
-  margin-bottom: 10px;
-} */
+@media only screen and (max-width: 992px) {
+  .card {
+    height: auto;
+  }
+}
