--- a/sections/clientTestimonials.module.css
+++ b/sections/clientTestimonials.module.css
@@ -16,7 +16,7 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 30px;
-  height: 300px;
+  min-height: 300px;
   background-color: rgba(255, 255, 255, 1);
 }
 @media only screen and (max-width: 992px) {
