--- a/sections/services.module.css
+++ b/sections/services.module.css
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   padding: 30px;
-  height: 300px;
+  min-height: 300px;
   background-color: rgba(255, 255, 255, 1);
 }
 @media only screen and (max-width: 992px) {
