--- a/sections/services.module.css
+++ b/sections/services.module.css
@@ -1,7 +1,7 @@
 .cardList {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 30px;
+  gap: 50px;
   margin: 30px 0 0 0;
 }
 
@@ -20,6 +20,6 @@
 }
 @media only screen and (max-width: 992px) {
   .card {
-    height: auto;
+    min-height: auto;
   }
 }
