--- a/sections/clientTestimonials.module.css
+++ b/sections/clientTestimonials.module.css
@@ -18,7 +18,8 @@
   justify-content: space-between;
   padding: 30px;
   min-height: 300px;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 @media only screen and (max-width: 992px) {
   .card {
