--- a/sections/services.module.css
+++ b/sections/services.module.css
@@ -17,7 +17,8 @@
   flex-direction: column;
   padding: 30px;
   min-height: 300px;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
 }
 @media only screen and (max-width: 992px) {
   .card {
