--- a/styles/style.css
+++ b/styles/style.css
@@ -131,6 +131,7 @@ button {
 button:hover {
   color: var(--color-primary);
   background-color: var(--color-primary-light);
+  cursor: pointer;
 }
 
 button a {
