--- a/styles/style.css
+++ b/styles/style.css
@@ -64,31 +64,35 @@ h6 {
   font-weight: var(--font-weight-bold);
   text-transform: uppercase;
   letter-spacing: 2px;
-  line-height: 1.1;
+  line-height: 1;
 }
-
 h1 {
   font-size: 4em;
 }
-
 h2 {
   font-size: 3em;
 }
-
 h3 {
   font-size: 2.5em;
 }
-
 h4 {
   font-size: 2em;
 }
-
 h5 {
   font-size: 1.5em;
 }
-
 h6 {
   font-size: 1em;
+}
+@media (max-width: 576px) {
+  h1,
+  h2 {
+    font-size: 2.5em;
+  }
+  h3,
+  h4 {
+    font-size: 2em;
+  }
 }
 
 p {
