refactor(style): add box shadow as root variable

--- a/sections/team.module.css
+++ b/sections/team.module.css
@@ -18,11 +18,11 @@
   flex-direction: column;
   /* padding: 30px;
   background-color: rgb(255, 255, 255);
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.05); */
+  box-shadow: var(--box-shadow); */
 }
 
 .cardImage {
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+  box-shadow: var(--box-shadow);
   filter: gray; /* IE6-9 */
   -webkit-flter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
   filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
