--- a/sections/services.module.css
+++ b/sections/services.module.css
@@ -18,7 +18,7 @@
   padding: 30px;
   min-height: 300px;
   background-color: rgb(255, 255, 255);
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+  box-shadow: var(--box-shadow);
 }
 @media only screen and (max-width: 992px) {
   .card {
