--- a/sections/team.module.css
+++ b/sections/team.module.css
@@ -4,12 +4,16 @@
   gap: 50px;
   margin: 0 0 0 30px;
 }
-
 @media only screen and (max-width: 992px) {
+  .cardList {
+    margin: 0;
+  }
+}
+
+@media only screen and (max-width: 768px) {
   .cardList {
     grid-template-columns: repeat(1, 1fr);
     gap: 30px;
-    margin: 0;
   }
 }
 
