--- a/components/section/section.module.css
+++ b/components/section/section.module.css
@@ -1,10 +1,15 @@
 .heading {
-  font-size: 40px;
+  font-size: 2.5em;
   font-weight: var(--font-weight-bold);
   text-transform: uppercase;
   letter-spacing: 2px;
   margin: 0 0 20px 0;
   color: var(--color-primary);
+}
+@media only screen and (max-width: 576px) {
+  .heading {
+    font-size: 2em;
+  }
 }
 
 .content {
@@ -13,7 +18,4 @@
 }
 .content > * {
   margin: 10px 0;
-}
-.content > button {
-  margin: 15px 0;
 }
