--- a/components/post/post.module.css
+++ b/components/post/post.module.css
@@ -17,6 +17,82 @@
   }
 }
 
+.slideshow {
+  display: flex;
+  flex-direction: row;
+  margin: 30px 0 0 0;
+  width: 100%;
+  height: auto;
+  padding: 30px;
+  background-color: var(--color-background-outer);
+  box-shadow: var(--box-shadow);
+}
+.slideshow .slideshowImage {
+  position: relative;
+  border: 2px solid var(--color-monotone-background);
+  min-height: 400px;
+  height: 400px;
+  flex-basis: 70%;
+}
+.slideshow .slideshowDescription {
+  padding: 0 30px 0 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-basis: 30%;
+}
+.slideshow .slideshowText {
+  display: flex;
+  flex-direction: column;
+}
+.slideshow .slideshowText > * {
+  margin: 0 0 10px 0;
+}
+.slideshow .frontmatter .title {
+  font-size: 1.5em;
+  font-weight: var(--font-weight-bold);
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  line-height: 1.3;
+  margin: 0 0 10px 0;
+}
+.slideshow .frontmatter .subtitle {
+  line-height: 1.3;
+  margin: 0 0 10px 0;
+}
+.slideshow .frontmatter .info {
+  display: none;
+}
+.slideshow .slideshowArrows {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+.slideshow .slideshowArrowsColumn {
+  display: none;
+}
+@media (max-width: 768px) {
+  .slideshow {
+    flex-direction: column;
+  }
+  .slideshow .slideshowImage {
+    flex-basis: 100%;
+  }
+  .slideshow .slideshowDescription {
+    padding: 0 0 20px 0;
+    flex-basis: 100%;
+  }
+  .slideshow .slideshowArrows {
+    display: none;
+  }
+  .slideshow .slideshowArrowsColumn {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    padding: 30px 0 0 0;
+  }
+}
+
 .list {
   margin: 30px 0 0 0;
   display: grid;
